	+ Improvements to reordering the current playlist with drag-n-drop
	+ Gnome session support
	+ Bug: Tag editing doesn't work with older version (0.90.1) of tagpy
	+ Bug: Info window freezes when editing currently playing song's tags
	+ Bug: Prevent strange potential freeze with gc.collect()
	+ Bug: Cover art doesn't update correctly if Local Only artwork set

v1.0 - January 21, 2006
	+ Multiple views for library: filesystem, artists, albums
	+ Editing of song tags (requires optional taglib & tagpy)
	+ Auto-fetching of song lyrics (requires optional soappy)
	+ Improved song info window and access to it
	+ Allow pls/m3u/extm3u's as stream inputs
	+ Sort current playlist (by metadata, random, reverse)
	+ Optional statusbar (playlist length, time)
	+ Revert to gtk's StatusIcon if gnome-python-extras isn't installed
	+ Make system tray icon optional
	+ Pref to write xmms-info like status file to use with IM, IRC.. (Tim)
	+ Allow drag-n-drop of images to set album art
	+ If there is only one image in the song's dir, set as art (Ivan)
	+ Album art priority preference (local vs remove)
	+ Formatting options (genre, song length, elapsed time, year) (Ivan)
	+ Pref to play enqueued items on activate (i.e. enter/double-click)
	+ Play friendler with other clients for shuffle/repeat/crossfade
	+ Reduced startup time/memory usage
	+ Use curly brackets {} to have formatting appear only if all enclosed
	  tags are available
	+ Ability to run on OLPC's Sugar user environment (Owen)
	+ Added Ukranian translation (Господарисько Тарас)
	+ Bug: No more freezes due to threading! Finally! Seriously!
	+ Bug: Cannot set album art for album/artist with "/" in name
	+ Bug: Prevent interface jumping because of progress bar font
	+ Bug: Notification window isn't positioned correctly for dual-head

v0.9 - November 19, 2006
	+ Added stream support
	+ Use local artwork (cover.jpg, folder.jpg) first, if it exists
	  (requires music_directory to be specified in preferences)